[gd_scene load_steps=9 format=3 uid="uid://cqq3thsbsvhon"]

[ext_resource type="Script" path="res://menu_scenes/account_tab_scenes/account_tab.gd" id="1_aedru"]
[ext_resource type="Texture2D" uid="uid://b5cbrc3bi4g6n" path="res://Assets/UI/label.png" id="2_hsjn6"]
[ext_resource type="Texture2D" uid="uid://b0vjaywamx3yp" path="res://Assets/Lights/spotlight.png" id="3_0r6qf"]
[ext_resource type="Texture2D" uid="uid://dpcl3osga8evf" path="res://Assets/Level/blackBackgroundLabel.png" id="4_qmwel"]
[ext_resource type="Texture2D" uid="uid://cmqh886i30ew2" path="res://Assets/UI/Phase_banner.png" id="5_0xum8"]

[sub_resource type="LabelSettings" id="LabelSettings_hsadf"]
font_size = 151

[sub_resource type="LabelSettings" id="LabelSettings_i55r7"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_wohyv"]
font_size = 24

[node name="AccountsTab" type="Node2D"]
position = Vector2(-38.9381, 3.53982)
scale = Vector2(0.585, 0.585)
script = ExtResource("1_aedru")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1005.31, 141.593)
scale = Vector2(4.715, 4.715)
texture = ExtResource("2_hsjn6")

[node name="accountlight" type="PointLight2D" parent="Sprite2D"]
light_mask = 2
position = Vector2(-0.750774, 1.50151)
scale = Vector2(3.88282, 1.30209)
range_layer_max = 7
texture = ExtResource("3_0r6qf")

[node name="AccountInput" type="LineEdit" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 586.0
offset_top = 23.0
offset_right = 1439.0
offset_bottom = 264.0
placeholder_text = "create Your account"
max_length = 15

[node name="typehint" type="Label" parent="."]
offset_left = 649.558
offset_top = 40.708
offset_right = 695.558
offset_bottom = 247.708
text = "I"
label_settings = SubResource("LabelSettings_hsadf")

[node name="accountnametext" type="Label" parent="."]
offset_left = 694.0
offset_top = 94.0
offset_right = 1358.0
offset_bottom = 219.0
text = " "
label_settings = SubResource("LabelSettings_i55r7")

[node name="EntryPosition" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(1033.63, 952.212)
texture = ExtResource("4_qmwel")

[node name="pos" type="Node2D" parent="EntryPosition"]
position = Vector2(-24.7788, -405.31)

[node name="Sprite2D2" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(1015.93, 306.195)
scale = Vector2(1.49948, 1.49948)
texture = ExtResource("5_0xum8")

[node name="AccountNameHint" type="Label" parent="Sprite2D2"]
offset_left = -139.281
offset_top = -28.3284
offset_right = 288.719
offset_bottom = 21.6716
text = "Enter your name to start"
label_settings = SubResource("LabelSettings_wohyv")

[node name="Button2" type="Button" parent="."]
offset_left = 1489.0
offset_top = 112.0
offset_right = 1630.0
offset_bottom = 197.0
text = "just start"

[connection signal="text_changed" from="AccountInput" to="." method="_on_account_input_text_changed"]
